# keel

./: .gitignore  .ignore  CLAUDE.md  LICENSE  README.md  deploy.sh  pyproject.toml
completion/: _keel
engine/: cli.py  containers.py  context.py  drift.py  emit.py  find.py  index.py  init.py  lint.py  matrix.py  new.py  nextodo.py  pack.py  refs.py  render.py  status.py  todo.py  view.py  watch.py
examples/: auth.graph.toon
examples/refs/: refs.graph.toon
examples/refs/fixtures/: degraded.rs  sample.py
examples/toons/refs-fixtures/: refs.graph.toon
examples/toons/src-auth/: auth.graph.toon
skill/: SKILL.md
skill/references/: schema.md
tests/: test_engine.py
